--- a/QQ_src/src/main/res/values/strings.xml
+++ b/QQ_src/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">千锋OA</string>
-    <string name="str_readme">说明：请假超过5天，需要CEO申批，请补发邮件</string>
-    <string name="str_copyright">北京千锋互联科技有限公司\nCopyright © 2016 - 2017 QianFeng.</string>
+    <string name="app_name">QQ</string>
+    <string name="str_copyright">QQ</string>
 </resources>
